Visual updates. CSS improvements. Collapsible menu.

--- a/BASE/Content/Site.css
+++ b/BASE/Content/Site.css
@@ -1,17 +1,59 @@
-﻿/* Move down content because we have a fixed navbar that is 50px tall */
-body {
-    padding-top: 50px;
-    padding-bottom: 20px;
+﻿table {
+    border-collapse: separate;
+    background: #fff;
+    border-radius: 5px;
+    margin: 50px auto;
+    /*box-shadow: 0px 0px 5px rgba(0,0,0,0.3);*/
 }
 
-/* Wrapping element */
-/* Set some basic padding to keep content from hitting the edges */
-.body-content {
+thead {
+    border-radius: 5px;
+}
+
+th{
     padding-left: 15px;
-    padding-right: 15px;
 }
 
-/* Set widths on the form inputs since otherwise they're 100% wide */
+    thead th {
+        font-family: 'Patua One', cursive;
+        font-size: 16px;
+        font-weight: 400;
+        color: #fff;
+        text-shadow: 1px 1px 0px rgba(0,0,0,0.5);
+        text-align: left;
+        padding: 15px;
+        background-image: linear-gradient(#646f7f, #4a5564);
+        border-top: 1px solid #858d99;
+    }
+
+tbody tr td {
+    font-family: 'Open Sans', sans-serif;
+    font-weight: 400;
+    color: #5f6062;
+    font-size: 13px;
+    padding: 20px 20px 20px 20px;
+    border-bottom: 1px solid #e0e0e0;
+}
+
+tbody tr:nth-child(2n) {
+    /*background: #f0f3f5;*/
+}
+
+tbody tr:last-child td {
+    border-bottom: none;
+}
+
+tbody:hover > tr td {
+    opacity: 0.5;
+}
+
+tbody:hover > tr:hover td {
+    text-shadow: none;
+    color: #2d2d2d;
+    opacity: 1.0;
+}
+
+
 input,
 select,
 textarea {
@@ -19,13 +61,15 @@ textarea {
 }
 
 
-/* Responsive: Portrait tablets and up */
-@media screen and (min-width: 768px) {
-    .jumbotron {
-        margin-top: 20px;
-    }
-
-    .body-content {
-        padding: 0;
-    }
+input {
+    border-radius: 5px;
+    box-sizing: border-box;
+    padding: 3px;
+    text-shadow: 1px 0px 0px rgba(0,0,0,0.5);
 }
+
+
+input[type=checkbox] {
+  display: inline-block;
+}
+
