Committee tied in with Contact

--- a/BASE/Content/Site.css
+++ b/BASE/Content/Site.css
@@ -2,7 +2,7 @@
     border-collapse: separate;
     background: #fff;
     border-radius: 5px;
-    margin: 50px auto;
+    /*margin: 50px auto;*/
     /*box-shadow: 0px 0px 5px rgba(0,0,0,0.3);*/
 }
 
@@ -44,7 +44,7 @@ tbody tr:last-child td {
 }
 
 tbody:hover > tr td {
-    opacity: 0.5;
+    opacity: 0.85;
 }
 
 tbody:hover > tr:hover td {
